# uzh-biomed-bot

./: .gitignore  Cargo.toml  modules.json  readme.md
src/: chat.rs  constant.rs  file.rs  lib.rs  main.rs  module.rs  persistence.rs  scheduling.rs  telegram.rs
