[package]
name = "uzh-biomed-bot"
version = "0.1.0"
authors = ["Jan Nils Ferner <contact@jnferner.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tbot = "0.5"
tokio = { version = "0.2", features = ["macros", "sync"] }
meval = "0.2"
dotenv = "0.15.0"
